# Athena-GUI

./: .gitmodules  CMakeLists.txt  LICENSE  README
dependencies/: CMakeLists.txt
include/Athena-GUI/: CMakeLists.txt  Config.h.in  GUIManager.h  Prerequisites.h
src/: CMakeLists.txt  GUIManager.cpp  SystemInterface.cpp  module.cpp.in
unittests/: CMakeLists.txt
unittests/Athena-GUI/: CMakeLists.txt
unittests/Athena-GUI/environments/: GUITestEnvironment.h
unittests/Athena-GUI/mocks/: MockRenderInterface.h
unittests/Athena-GUI/tests/: test_GUIManager.cpp
